2017-09-29         [RELEASE] Release of persons 0.5.0 (Dirk Wenzel)
2017-09-29 62c00f5 [TASK] cast to bool replaced by !empty() in PersonRepository->findMultipleByUid (Dirk Wenzel)
2017-09-26 83b4352 [BUGFIX] Allow persons with default language in showSelectedAction (Nicole Cordes)

2017-09-26         [RELEASE] Release of persons 0.4.1 (Dirk Wenzel)
2017-09-26 46cf6d6 [BUGFIX] fixed error in AbstractJsonView caused by invalid return value null of TYPO3\CMS\Extbase\Persistence\Generic\LazyLoadingProxy->_loadRealInstance() (Dirk Wenzel)

2017-09-25         [RELEASE] Release of persons 0.4.0 (Dirk Wenzel)
2017-09-20 a2d564d [TASK] german localization for backend added. Changed language file format to xliff. (Dirk Wenzel)

2017-09-19         [RELEASE] Release of persons 0.3.0 (Dirk Wenzel)
2017-09-19 d8a8945 [TASK] german localization for backend added. (Dirk Wenzel)

2017-09-19         [RELEASE] Release of persons 0.2.0 (Dirk Wenzel)
2017-09-14 f0d1178 [BUGFIX] fixed error in configuration of json list view which prevented image field from rendering (Dirk Wenzel)
2017-09-14 6a6e2a6 [BUGFIX] View ListJson now renders missing field uid too. (Dirk Wenzel)
2017-09-13 fd34dd2 [TASK] PersonController->listAction now emits a signal before assigning variables to view too. (Dirk Wenzel)
2017-09-08 8d05a6a [TASK] Json view for person listing extended: now category parent is displayed too. (Dirk Wenzel)
2017-09-08 1218770 [TASK] PersonRepositoryTrait and SignalTrait implemented. PersonController refactored and extended: filterAction now sends signal before assigning variables to view. (Dirk Wenzel)
2017-08-23 cfa2cb0 [TASK] Json View now transforms object storages too. View ListJson renders categories. (Dirk Wenzel)
2017-08-03 03c8f8b [TASK] model Person edited: field status removed, departments replaced by categories (Dirk Wenzel)
2017-08-01 c8d4301 [BUGFIX] fix error in Person model where getter return wrong property. Failing unit test for PersonController fixed. (Dirk Wenzel)